--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <div style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
       <h1>Ship Generator</h1>
       <div style="float:left; position:static; height:24; padding:3px;">
-        Page v.037 <div id="versionlabel"> Script not loaded </div>
+        Page v.038 <div id="versionlabel"> Script not loaded </div>
       </div>
       <div style="float:left; position:static; height:24; padding:3px; text-align: center;">
         Seed<br>
@@ -17,7 +17,8 @@
         <label for="slowmode">Slow Mode</label>
       </div>
       <div id="hullspane" style="clear:left">
-        <p>Hulls Pane.</p>
+        <ul style="list-style-type:none;" id="hullspane">
+        </ul>
       </div>
     </div>
     <div id="settingspane" style="height:100%; width:25%; position:fixed; z-index:1; top:0px; padding:10px; right:50%;">
