--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <body style="background-color:#1b1b20; color:#909090;">
     <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; left: 0; padding-left:10px" id="leftpane">
-      <div style="float:left; position:static; padding:3px;">
+      <div style="float:left; position:static; padding:3px; overflow:scroll;">
         <h1>Ship Generator</h1>
         <div style="float:left; position:static; height:24; padding:3px;">
-          Page v.041 <div id="versionlabel"> Script not loaded </div>
+          Page v.042 <div id="versionlabel"> Script not loaded </div>
         </div>
         <div style="float:left; position:static; height:24; padding:3px; text-align: center;">
           Seed<br>
